Bug 81039 - Macro Recording: Crash when click "New Libary" button
Summary: Macro Recording: Crash when click "New Libary" button
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.3.0.2 rc
Hardware: x86 (IA32) All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.3
Keywords: bibisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2014-07-08 10:11 UTC by Kevin Suo
Modified: 2015-12-17 08:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
gdbtrace (2.70 KB, application/gzip)
2014-08-17 17:25 UTC, raal
Details
gdbtrace (2.70 KB, application/gzip)
2014-08-17 17:29 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2014-07-08 10:11:16 UTC
After macro recording is finished, you have to choose a location for the recorded macro to be stored. When I click "New Libary" button on the location selection dialog, libreoffice crashes.

Steps to reproduce:
1. New Writer.
2. Enable macro recording (Tools - Options - Advanced...).
3. Start macro recording, click the text and hit a ENTER, then stop macro recording.
4. Click "New Libary" on the location selection dialog window.

Current behaviour:
LibreOffice crashes. Resetting user profile does not work.

Fedora 20 x86
LibreOffice 4.3.0.2
Comment 1 Dominik 2014-07-08 11:33:07 UTC
confirmed on OpenSuSE 13.1.10 with LO 4.3.0.2
Comment 2 Kevin Suo 2014-07-09 02:35:59 UTC
Also reproduce in Windows XP SP3.
Set platform to ALL.
Comment 3 tommy27 2014-07-20 05:31:14 UTC
It works in 4.2.5.2
the "New library" functionality is broken in 4.3.x and 4.4.x as well.
hence regression.
Comment 4 raal 2014-07-29 14:43:26 UTC
commit ce550d732fd43380870f273e6674894d5bb1cdf2
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sun May 11 10:33:38 2014 +0000

    source-hash-b634aa656a74e1f8ebeaf8a9092829294c49171d
    
    commit b634aa656a74e1f8ebeaf8a9092829294c49171d
    Author:     Chris Sherlock <chris.sherlock79@gmail.com>
    AuthorDate: Fri Feb 7 22:50:28 2014 +1100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Fri Feb 7 20:16:23 2014 +0000
    
        Remove commented code in OutputDevice::ReMirror
    
        The following code was reimplemented in a cleaner fashion some time
        ago. However, it was just commented out and never removed. There is
        no need for it now, so removing. It's in the DVCS if it's really
        needed :-)
    
        Change-Id: Ia7d3c480ba70ccbd8dcf2808d9b712499c4cef4f
        Reviewed-on: https://gerrit.libreoffice.org/7913
        Reviewed-by: Caolán McNamara <caolanm@redhat.com>
        Tested-by: Caolán McNamara <caolanm@redhat.com>

:100644 100644 05874cf3764db72071b0d1b5d25bab8c7b5f7fb0 253114e5235f294b17b079bdbbc5aeeaae0e15b2 M	ccache.log
:100644 100644 b6d22eb23af685e0bf6f87ef3f5ef02a999ddc19 e1a110f455c5d638b61505bc8751b78557282e98 M	commitmsg
:100644 100644 a958005a2c4cd7a54b08bd25ec524930b3f5f0d3 bc63e7f72f8898a76d822c221a1fc5d1c2c91cf5 M	make.log
:040000 040000 fb4d7c258fc0eadfaeae60b239d3efd2c55e4e26 e2de3407c4f93021f77aae11d25f83026b900b1f M	opt


git bisect log
# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect good 4850941efe43ae800be5c76e1102ab80ac2c085d
# bad: [a900e72b6357882284c5955bdf939bf14269f5fb] source-hash-dd1050b182260a26a1d0ba6d0ef3a6fecc3f4e07
git bisect bad a900e72b6357882284c5955bdf939bf14269f5fb
# bad: [e1d0365cd2b073a859f59ad0a4584385a66dc611] source-hash-2eea96c702a44ab009743b0d22ef639127f0b57b
git bisect bad e1d0365cd2b073a859f59ad0a4584385a66dc611
# good: [98a55bf95f3ec29298751fd8fba76dd2236dce43] source-hash-58dfc97ca697875c36b7ddf14f5505a93d7b9cf8
git bisect good 98a55bf95f3ec29298751fd8fba76dd2236dce43
# good: [1f32fb58159d7f43a4bcb838765261d5274cbf38] source-hash-4a169e4203c10ec8f76b9bcb33882c82b65c7bab
git bisect good 1f32fb58159d7f43a4bcb838765261d5274cbf38
# good: [e8547c17def5e45d1a9ff2cf5eb28b142b3daca0] source-hash-53ca207a700c9501e76c7770f6b1e3af89edd630
git bisect good e8547c17def5e45d1a9ff2cf5eb28b142b3daca0
# bad: [62e28acf6d832fb1ad030889541aad3f626612ba] source-hash-12e0102f39ee3a0398a4369bbc4af4ea0f51ca14
git bisect bad 62e28acf6d832fb1ad030889541aad3f626612ba
# bad: [ce550d732fd43380870f273e6674894d5bb1cdf2] source-hash-b634aa656a74e1f8ebeaf8a9092829294c49171d
git bisect bad ce550d732fd43380870f273e6674894d5bb1cdf2
# good: [1da81d12775c421b7a04cd3a579fa555442c35f6] source-hash-ac01fd51822dc006abec578d61d66f7a169c19cb
git bisect good 1da81d12775c421b7a04cd3a579fa555442c35f6
# first bad commit: [ce550d732fd43380870f273e6674894d5bb1cdf2] source-hash-b634aa656a74e1f8ebeaf8a9092829294c49171d
Comment 5 Julien Nabet 2014-08-05 20:47:20 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce the crash.
However, I'm not sure having understood "click the text". Do you mean just click on the page to start typing? If yes, I don't reproduce the crash.
Comment 6 raal 2014-08-06 05:08:27 UTC
(In reply to comment #5)
> On pc Debian x86-64 with master sources updated today, I don't reproduce the
> crash.
> However, I'm not sure having understood "click the text". Do you mean just
> click on the page to start typing? If yes, I don't reproduce the crash.

I can reproduce crash with Version: 4.4.0.0.alpha0+
Build ID: 04a65e2704ee80701ca750f2e7c8c0565d2aa830
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-08-04_23:46:59
Follow the steps
3. Start macro recording, click the text and hit a ENTER, then stop macro recording.
4. Click "New Libary" on the location selection dialog window.

click the text = click on the page to start typing, then press enter
Comment 7 Julien Nabet 2014-08-09 05:56:17 UTC
I still don't reproduce this :-(

Would it be possible one of you attach a backtrace by following this link? https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.2FLinux:_How_to_get_a_backtrace
Comment 8 raal 2014-08-17 17:25:07 UTC
Created attachment 104767 [details]
gdbtrace
Comment 9 raal 2014-08-17 17:29:25 UTC
Created attachment 104768 [details]
gdbtrace
Comment 10 Julien Nabet 2014-08-22 09:25:50 UTC
Thank you for your feedback. I put it at NEW since there's a bt.
Comment 11 Commit Notification 2014-09-14 15:22:19 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a88b2d841856026ea1a0539d670e07fafd296c6e

Resolves: fdo#81039 crash on adding new macro library



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2014-09-14 15:31:06 UTC
4.3 review at https://gerrit.libreoffice.org/11447
Comment 13 Commit Notification 2014-09-15 14:24:05 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=64a89bee8c3bd74d789f50256d2528d9b5f4f736&h=libreoffice-4-3

Resolves: fdo#81039 crash on adding new macro library


It will be available in LibreOffice 4.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Robinson Tryon (qubit) 2015-12-17 08:25:49 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]